kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  ports:
    - port: 80
      targetPort: 8000
